2012-06-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Disallow source operand in h or l for >= 16-bit addition that also has a source operand on extended stack. Final part of fix for bug #3531660.
	* support/regression/tests/bug3531687.c:
	  Regression test for bug #3531687.

2012-06-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCopt.c: fixed several missing def/use problems including 
	  bug #3511517
	* src/SDCCBBlock.c (addiCodeToeBBlock): fixed bug #3511516
	* src/hc08/ralloc.c (packRegisters): fixed bug #3531045
	* support/regression/tests/gcc-torture-execute-980604-1.c: reenabled
	* support/regression/tests/gcc-torture-execute-980205.c: reenabled

2012-06-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  Fix handling of --fomit-frame-pointer for z180, r2k and r3ka port.

2012-06-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genAssign): no assignment for ruonly to ruonly
	* src/SDCC.y,
	* src/SDCCerr.c: W_COMP_RANGE, W_EMPTY_SOURCE_FILE & W_CONTROL_FLOW are pedantic
	* src/SDCCast.c (processParms): no cast for signedness only,
	  (resultTypePropagate): propagate for GETHBIT, GETABIT, GETBYTE & GETWORD,
	  (decorateType: BITWISEAND): rearrange first,
	  (decorateType: RETURN): no cast for signedness only,
	  (optimizeGetHbit, optimizeGetAbit): use bitsForType instead of getSize and
	   propagate resultType,
	  (optimizeGetByte, optimizeGetWord): handle offset 0
	* src/SDCClabel.c (deleteIfx),
	* src/SDCCcse.c (ifxOptimize): W_CONTROL_FLOW is pedantic,
	  (algebraicOpts: BITWISEAND, OR): use bitsForType instead of getSize
	* src/SDCCicode.c (geniCodeLogic): W_COMP_RANGE is pedantic,
	  (geniCodeUnary, geniCodeBinary): added param resType,
	  (checkTypes): no cast for signedness only,
	  (ast2iCode): propagate tree->ftype
	* src/SDCCopt.c (optimizeCastCast): use bitsForType instead of getSize
	* src/SDCCsymt.c (comparePtrType): only cast signedness if necessary
	* src/SDCCsymt.h,